# hacklahoma

./: .gitignore  README.md  debug_google.html  docker-compose.yml  package.json  pnpm-lock.yaml  start_all.sh
app/: globals.css  layout.tsx  page.tsx
app/api/transcribe/: route.ts
backend/: .env.example  Dockerfile  debug_scrape.py  env  google_search_dump.html  pyproject.toml  requirements.txt  selenium_dump.html  test_pipeline.py  test_pipeline_flashcards.py  test_pipeline_quiz.py  test_simulation_cache.py
backend/app/: config.py  main.py  schemas.py
backend/app/prompts/: animation.md  concept_extraction.md  flashcard_generation.md  pipeline_decision.md  quiz_generation.md  simulation_from_chunk.md  simulation_user.md  system_animation.md  system_transcription.md  transcript_system.md  walkthrough.md
backend/app/services/: auth.py  elevenlabs.py  gemini.py  google_search.py  pipeline.py  quiz.py  simulation.py  youtube.py
components/: concept-detail-panel.tsx  concepts-sidebar.tsx  dashboard-sidebar.tsx  dashboard.tsx  lecture-info-panel.tsx  lectures-view.tsx  live-learn-view.tsx  login-screen.tsx  transcription-panel.tsx
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/docs/: elevenlabs-realtime-transcription-client.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClassForm.tsx  GlobalSearchBar.tsx  KeyConcepts.tsx  LectureForm.tsx  (+1 more)
hooks/: use-realtime-transcription.ts
scripts/: start_backend.sh  start_backend_docker.sh  start_frontend.sh
(+7 files in other folders)
